cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_13.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:83: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:83:9: Write of unused value
81.           }
82.           l2n(xor0, iv);
83.           l2n(xor1, iv);
              ^
84.       }
85.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
